[CLEAN CODE] Refactor Service Test