@@ -39,7 +39,7 @@ class ShipmentServiceImplTest {
 
     @Test
     void testSaveShipment() throws ExecutionException, InterruptedException{
-        Shipment shipment = shipments.get(0);
+        Shipment shipment = shipments.getFirst();
         doReturn(shipment).when(shipmentRepository).saveShipment(shipment);
         Shipment result = shipmentService.saveShipment(shipment).get();
         verify(shipmentRepository,times(1)).saveShipment(shipment);
@@ -48,7 +48,7 @@ class ShipmentServiceImplTest {
 
     @Test
     void testSaveShipmentWithExistingId() throws ExecutionException, InterruptedException{
-        Shipment shipment = shipments.get(0);
+        Shipment shipment = shipments.getFirst();
         doReturn(shipment).when(shipmentRepository).findById(shipment.getId());
         Shipment result = shipmentService.saveShipment(shipment).get();
         verify(shipmentRepository, times(1)).findById(shipment.getId());
@@ -58,7 +58,7 @@ class ShipmentServiceImplTest {
 
     @Test
     void testSetShipmentStatus() throws ExecutionException, InterruptedException{
-        Shipment shipment = shipments.get(0);
+        Shipment shipment = shipments.getFirst();
         doReturn(shipment).when(shipmentRepository).findById(shipment.getId());
         doReturn(shipment).when(shipmentRepository).saveShipment(shipment);
         Shipment result = shipmentService.setShipmentStatus(shipment.getId(), ShippingStatus.DIKIRIM.toString()).get();
@@ -68,12 +68,12 @@ class ShipmentServiceImplTest {
     }
 
     @Test
-    void testSetShipmentStatusWithNonExistingShipment() throws ExecutionException, InterruptedException{
-        Shipment shipment = shipments.get(0);
+    void testSetShipmentStatusWithNonExistingShipment() {
+        Shipment shipment = shipments.getFirst();
         doReturn(null).when(shipmentRepository).findById(shipment.getId());
         String status = ShippingStatus.DIKIRIM.toString();
         String id = shipment.getId();
-        NoSuchElementException noSuchElementException = assertThrows(NoSuchElementException.class, () -> {
+        assertThrows(NoSuchElementException.class, () -> {
             shipmentService.setShipmentStatus(id, status);
         });
         verify(shipmentRepository,times(1)).findById(shipment.getId());
@@ -83,7 +83,7 @@ class ShipmentServiceImplTest {
 
     @Test
     void testDeleteShipment() throws ExecutionException, InterruptedException{
-        Shipment shipment = shipments.get(0);
+        Shipment shipment = shipments.getFirst();
         doReturn(shipment).when(shipmentRepository).deleteShipment(shipment.getId());
         Shipment result = shipmentService.deleteShipment(shipment.getId()).get();
         verify(shipmentRepository,times(1)).deleteShipment(shipment.getId());
@@ -92,7 +92,7 @@ class ShipmentServiceImplTest {
 
     @Test
     void testDeleteNonExistingShipment() throws ExecutionException, InterruptedException{
-        Shipment shipment = shipments.get(0);
+        Shipment shipment = shipments.getFirst();
         doReturn(null).when(shipmentRepository).deleteShipment(shipment.getId());
         Shipment result = shipmentService.deleteShipment(shipment.getId()).get();
         verify(shipmentRepository,times(1)).deleteShipment(shipment.getId());
@@ -101,7 +101,7 @@ class ShipmentServiceImplTest {
 
     @Test
     void testFindByIdIfFound() throws ExecutionException, InterruptedException{
-        Shipment shipment = shipments.get(0);
+        Shipment shipment = shipments.getFirst();
         doReturn(shipment).when(shipmentRepository).findById(shipment.getId());
         Shipment result = shipmentService.findById(shipment.getId()).get();
         verify(shipmentRepository, times(1)).findById(shipment.getId());
@@ -110,7 +110,7 @@ class ShipmentServiceImplTest {
 
     @Test
     void testFindByIdIfNotFound() throws ExecutionException, InterruptedException{
-        Shipment shipment = shipments.get(0);
+        Shipment shipment = shipments.getFirst();
         doReturn(null).when(shipmentRepository).findById(shipment.getId());
         Shipment result = shipmentService.findById(shipment.getId()).get();
         verify(shipmentRepository, times(1)).findById(shipment.getId());
@@ -127,7 +127,7 @@ class ShipmentServiceImplTest {
 
     @Test
     void testFindByOrderIdIfFound() throws ExecutionException, InterruptedException{
-        Shipment shipment = shipments.get(0);
+        Shipment shipment = shipments.getFirst();
         doReturn(shipment).when(shipmentRepository).findByOrderId(shipment.getOrderId());
         Shipment result = shipmentService.findByOrderId(shipment.getOrderId()).get();
         verify(shipmentRepository, times(1)).findByOrderId(shipment.getOrderId());
